--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.4.1",
-        "admin-lte": "^3.0.0-alpha.2",
+        "vue-material": "^1.0.0-beta-10.2",
         "vue-router": "^3.0.1"
     }
 }
