--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.4.1",
+        "moment": "^2.22.2",
         "vue-material": "^1.0.0-beta-10.2",
         "vue-router": "^3.0.1",
         "vuelidate": "^0.7.4"
