--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.4.1",
+        "chart.js": "^2.7.3",
         "moment": "^2.22.2",
+        "vue-chartjs": "^3.4.0",
         "vue-material": "^1.0.0-beta-10.2",
         "vue-router": "^3.0.1",
         "vuelidate": "^0.7.4"
