--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-chartjs": "^3.4.0",
         "vue-material": "^1.0.0-beta-10.2",
         "vue-router": "^3.0.1",
-        "vuelidate": "^0.7.4"
+        "vuelidate": "^0.7.4",
+        "vuex": "^3.0.1"
     }
 }
