--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-material": "^1.0.0-beta-10.2",
         "vue-router": "^3.0.1",
         "vuelidate": "^0.7.4",
+        "vuetify": "^1.3.9",
         "vuex": "^3.0.1"
     }
 }
